adding new relay settings
